fix: overflow auto when the dropdown is taller than viewport height

--- a/elements/rh-secondary-nav/rh-secondary-nav-menu.css
+++ b/elements/rh-secondary-nav/rh-secondary-nav-menu.css
@@ -4,6 +4,8 @@
 
 :host([visible]) {
   background-color: var(--rh-snav-expanded-background-color);
+  max-height: calc(100vh - var(--rh-snav-min-height ,4.625rem));
+  overflow-y: auto;
 }
 
 #section {
